--- a/inst/tutorials/lezione_02_vettori/lezione_02_vettori.Rmd
+++ b/inst/tutorials/lezione_02_vettori/lezione_02_vettori.Rmd
@@ -304,7 +304,7 @@ animali[c(1, 1, 1, 2, 2, 3, 4, 4, 5)]
 ```{r con1, exercise=TRUE}
 # Crea un vettore (val) che contenga i seguenti valori:
 # 10, 20, 30, 40, 50, 60, 70, 80, 90, 100
-
+val <- seq(___, ___, ___)
 # Estrai dal vettore val tutti i valori maggiori di 30
 
 ```
