--- a/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.Rmd
+++ b/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.Rmd
@@ -18,7 +18,7 @@ penguins <- palmerpenguins::penguins
 ```
 
 ```{r df1, exercise=TRUE}
-# Usantdo la tibble chiamata penguins seleziona le colonne 1, 5, 8
+# Usando la tibble chiamata penguins seleziona le colonne 1, 5, 8
 # Usa la funziona select e il pipe opetator %>%
 
 penguins %>% 
@@ -26,17 +26,16 @@ penguins %>%
 ```
 
 ```{r df1-hint-1}
-# Sostituisci i numeri hai trattini
+# Sostituisci i numeri ai trattini
 ```
 
 ```{r df1-hint-2}
-# In alternativa puoi usare le funzioni nrow() e ncol()
+
 ```
 
 ```{r df1-hint-3}
 # La soluzione è
-dim(penguins)
-ncol(penguins)
-nrow(penguins)
+penguins %>% 
+    select(1, 5, 8)
 ```
 
