--- a/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.Rmd
+++ b/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.Rmd
@@ -7,6 +7,7 @@ runtime: shiny_prerendered
     ```{r setup, include=FALSE}
 library(learnr)
 library(palmerpenguins)
+library(tidyverse)
 ```
 
 ## Select
