Add data folder creation

--- a/inst/tutorials/lezione_02_dataframe/lezione_02_dataframe.Rmd
+++ b/inst/tutorials/lezione_02_dataframe/lezione_02_dataframe.Rmd
@@ -137,6 +137,9 @@ quiz(
 
 ```{r df5-setup, echo = FALSE}
 library(tidyverse)
+dir.create("data",  showWarnings = FALSE)
+download.file(url = "https://ndownloader.figshare.com/files/2292169",
+              destfile = "data/portal_data_joined.csv")
 surveys <- read_csv("data/portal_data_joined.csv")
 ```
 
