--- a/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.Rmd
+++ b/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.Rmd
@@ -273,3 +273,156 @@ penguins %>%
     mutate(island = ifelse(island == "Torgersen", "Elba", island))
 ```
 
+## Group_by / Summarise
+
+
+```{r df11, exercise=TRUE, exercise.setup = "df1-setup" }
+# Usando la tibble chiamata penguins calcola la media e la mediana della lunghezza dei becchi 
+# Delle tre specie di pinguini
+
+```
+
+```{r df11-hint-1}
+# Utilizare le funzioni group_by e summarise
+```
+
+```{r df11-hint-2}
+# Raggruppa usando la colonna species
+# La media si calcola usando la funzione mean()
+# La mediana si calcola usando la funzione median()
+```
+
+```{r df11-hint-3}
+# Ricordatevi che se sono presenti degli NA nella colonna, il risultato delle funzioni
+# mean e median sarà NA. Per ovviare a questo problema dovete rimuovere gli NA o dire alle
+# funzioni di ignorarli usando na.rm = TRUE
+```
+
+```{r df11-hint-4}
+# La soluzione 1 è
+penguins %>% 
+    group_by(species) %>%
+    summarise(media = mean(bill_length_mm, na.rm = TRUE),
+              mediana = median(bill_length_mm, na.rm = TRUE))
+
+# La soluzione 2 è
+penguins %>% 
+    filter(!is.na(bill_length_mm)) %>%
+    group_by(species) %>%
+    summarise(media = mean(bill_length_mm),
+              mediana = median(bill_length_mm))
+```
+
+```{r df11, exercise=TRUE, exercise.setup = "df1-setup" }
+# Usando la tibble chiamata penguins calcola la media e la mediana della lunghezza dei becchi 
+# Delle tre specie di pinguini ogni anno di campionamento
+
+```
+
+```{r df11-hint-1}
+# L'esercizio è del tutto simile al precedente, ma invece di raggruppare solamente per
+# species ora bisogna raggruppare anche per year
+```
+
+```{r df11-hint-2}
+# La media si calcola usando la funzione mean()
+# La mediana si calcola usando la funzione median()
+```
+
+```{r df11-hint-3}
+# Ricordatevi che se sono presenti degli NA nella colonna, il risultato delle funzioni
+# mean e median sarà NA. Per ovviare a questo problema dovete rimuovere gli NA o dire alle
+# funzioni di ignorarli usando na.rm = TRUE
+```
+
+```{r df11-hint-4}
+# La soluzione 1 è
+penguins %>% 
+    group_by(species, year) %>%
+    summarise(media = mean(bill_length_mm, na.rm = TRUE),
+              mediana = median(bill_length_mm, na.rm = TRUE))
+
+# La soluzione 2 è
+penguins %>% 
+    filter(!is.na(bill_length_mm)) %>%
+    group_by(species, year) %>%
+    summarise(media = mean(bill_length_mm),
+              mediana = median(bill_length_mm))
+```
+
+```{r df12, exercise=TRUE, exercise.setup = "df1-setup" }
+# Usando la tibble chiamata penguins calcola la media e la mediana della lunghezza dei becchi 
+# Delle tre specie di pinguini ogni anno di campionamento e per ogni isola
+
+```
+
+```{r df12-hint-1}
+# L'esercizio è del tutto simile al precedente, ma invece di raggruppare per
+# species e year, ora bisogna aggiungere island
+```
+
+```{r df12-hint-2}
+# La media si calcola usando la funzione mean()
+# La mediana si calcola usando la funzione median()
+```
+
+```{r df12-hint-3}
+# Ricordatevi che se sono presenti degli NA nella colonna, il risultato delle funzioni
+# mean e median sarà NA. Per ovviare a questo problema dovete rimuovere gli NA o dire alle
+# funzioni di ignorarli usando na.rm = TRUE
+```
+
+```{r df12-hint-4}
+# La soluzione 1 è
+penguins %>% 
+    group_by(species, year, island) %>%
+    summarise(media = mean(bill_length_mm, na.rm = TRUE),
+              mediana = median(bill_length_mm, na.rm = TRUE))
+
+# La soluzione 2 è
+penguins %>% 
+    filter(!is.na(bill_length_mm)) %>%
+    group_by(species, year, island) %>%
+    summarise(media = mean(bill_length_mm),
+              mediana = median(bill_length_mm))
+```
+
+```{r df13, exercise=TRUE, exercise.setup = "df1-setup" }
+# Usando la tibble chiamata penguins estrai il pinguino maschio e il pinguino femmina con
+# il becco più lungo
+
+```{r df13-hint-1}
+# L'esercizio prevede l'utilizzo di group_by ma non di summarise
+
+```
+
+```{r df13-hint-2}
+# Utilizzare la funzione filter dopo aver raggruppato per sex
+```
+
+```{r df13-hint-3}
+# La soluzione è
+penguins %>% 
+    group_by(sex) %>%
+    filter(bill_length_mm == min(bill_length_mm))
+```
+
+```{r df13, exercise=TRUE, exercise.setup = "df1-setup" }
+# Usando la tibble chiamata penguins estrai per ogni specie il pinguino maschio e il pinguino femmina con
+# il becco più lungo
+
+```{r df13-hint-1}
+# L'esercizio è simile al precedente, ma bisogna raggruppare anche per species
+
+```
+
+```{r df13-hint-2}
+# Utilizzare la funzione filter dopo aver raggruppato per sex e species
+```
+
+```{r df13-hint-3}
+# La soluzione è
+penguins %>% 
+    group_by(sex, species) %>%
+    filter(bill_length_mm == min(bill_length_mm))
+```
