--- a/inst/tutorials/lezione_02_vettori/lezione_02_vettori.Rmd
+++ b/inst/tutorials/lezione_02_vettori/lezione_02_vettori.Rmd
@@ -4,7 +4,7 @@ output: learnr::tutorial
 runtime: shiny_prerendered
 ---
     
-    ```{r setup, include=FALSE}
+```{r setup, include=FALSE}
 library(learnr)
 
 ```
@@ -30,7 +30,7 @@ library(learnr)
 
 ```{r salva-hint-3}
 # La soluzione è 
-(x <- 1:15)
+# (x <- 1:15)
 ```
 
 
@@ -49,7 +49,7 @@ library(learnr)
 
 ```{r salva1-hint-3}
 # La soluzione è 
-(y <- 15:1)
+# ( <- 15:1)
 ```
 
 #### In questo esercizio salveremo all'interno di una variabile un vettore con incremento diverso da 1
@@ -70,7 +70,7 @@ library(learnr)
 
 ```{r salva2-hint-3}
 # La soluzione è 
-(z <- seq(2, 200, 2))
+# (z <- seq(2, 200, 2))
 ```
 
 #### Questo esercizio è concettualmente simile al precedente, ma bisogna costruire un vettore di numeri dispari da 1 a 200. 
@@ -90,7 +90,7 @@ library(learnr)
 
 ```{r salva3-hint-3}
 # La soluzione è 
-seq(1, 200, 2)
+# seq(1, 200, 2)
 ```
 
 #### Nei seguente esercizi creeremo vettori logici e di caratteri
@@ -114,8 +114,8 @@ seq(1, 200, 2)
 
 ```{r log1-hint-3}
 # La soluzione è 
-lg <- c(TRUE, TRUE, TRUE, FALSE, FALSE)
-class(lg)
+# lg <- c(TRUE, TRUE, TRUE, FALSE, FALSE)
+# class(lg)
 ```
 
 ```{r log2, exercise=TRUE}
@@ -137,8 +137,8 @@ class(lg)
 
 ```{r log2-hint-3}
 # La soluzione è 
-ch <- c("Marta", "Giovanni", "Emma", "Mattia")
-class(ch)
+# ch <- c("Marta", "Giovanni", "Emma", "Mattia")
+# class(ch)
 ```
 
 ### Confrontiamo le classi dei vettori
@@ -147,10 +147,10 @@ Ti ricordo che un vettore può contenere SOLO elementi della stessa classe. Cosa
 
 ```{r log3, exercise=TRUE}
 # Usa i seguenti vettori per rispondere alle domande:
-num_char <- c(1, 2, 3, "a")
-num_logical <- c(1, 2, 3, TRUE)
-char_logical <- c("a", "b", "c", TRUE)
-tricky <- c(1, 2, 3, "4")
+# num_char <- c(1, 2, 3, "a")
+# num_logical <- c(1, 2, 3, TRUE)
+# char_logical <- c("a", "b", "c", TRUE)
+# tricky <- c(1, 2, 3, "4")
 
 ## Puoi correre qui il codice R 
 ```
@@ -229,8 +229,8 @@ quiz(caption = "class coercion",
 
 ```{r salva4-hint-3}
 # La soluzione è 
-x <- 5:15
-x[5]
+# x <- 5:15
+# x[5]
 ```
 
 #### Complichiamo un po l'esercizio
@@ -257,8 +257,8 @@ x[5]
 
 ```{r salva5-hint-4}
 # La soluzione è 
-x <- 5:15
-x[c(1, 5, 9]
+# x <- 5:15
+# x[c(1, 5, 9]
 ```
 
 #### Creaiamo ora un vettore con caratteri invece che numeri
@@ -279,7 +279,7 @@ animali <- c("cane", "gatto", "maiale", "topo", "mucca")
 # Crea un vettore che ripeta i nomi degli animali tante volte quanti sono gli animali presenti nella fattoria: 
 # cani = 3, gatti = 2, maiale = 1, topo = 2, mucca = 1. 
 # Usa la variabile animali
-animali
+# animali
 ```
 
 ```{r salva7-hint-1}
@@ -295,7 +295,7 @@ animali
 
 ```{r salva7-hint-3}
 # Soluzione:
-animali[c(1, 1, 1, 2, 2, 3, 4, 4, 5)]
+# animali[c(1, 1, 1, 2, 2, 3, 4, 4, 5)]
 ```
 
 ### Conditional Subsetting
@@ -304,7 +304,7 @@ animali[c(1, 1, 1, 2, 2, 3, 4, 4, 5)]
 ```{r con1, exercise=TRUE}
 # Crea un vettore (val) che contenga i seguenti valori:
 # 10, 20, 30, 40, 50, 60, 70, 80, 90, 100
-val <- seq(___, ___, ___)
+# val <- seq(___, ___, ___)
 # Estrai dal vettore val tutti i valori maggiori di 30
 
 ```
@@ -319,8 +319,8 @@ val <- seq(___, ___, ___)
 
 ```{r con1-hint-3}
 # Soluzione:
-val <- seq(10, 100, 10)
-val[val > 30]
+# val <- seq(10, 100, 10)
+# val[val > 30]
 ```
 
 ```{r con2-setup}
@@ -329,7 +329,7 @@ val <- seq(10, 100, 10)
 
 ```{r con2, exercise=TRUE}
 # Usa il vettore val ed estrai tutti i valoti minori o uguali a 50
-val[___]
+# val[___]
 ```
 
 ```{r con2-hint-1}
@@ -338,7 +338,7 @@ val[___]
 
 ```{r con2-hint-2}
 # Soluzione:
-val[val <= 50]
+# val[val <= 50]
 ```
 
 ```{r con3-setup}
@@ -347,7 +347,7 @@ val <- seq(10, 100, 10)
 
 ```{r con3, exercise=TRUE}
 # Usa il vettore val ed estrai tutti i valori maggiori di 20 e minori di 70
-val[___  & ___]
+# val[___  & ___]
 ```
 
 ```{r con3-hint-1}
@@ -358,7 +358,7 @@ val[___  & ___]
 
 ```{r con3-hint-2}
 # Soluzione:
-val[val > 20 & val < 70]
+# val[val > 20 & val < 70]
 ```
 
 ```{r con4-setup}
@@ -367,7 +367,7 @@ val <- seq(10, 100, 10)
 
 ```{r con4, exercise=TRUE}
 # Usa il vettore val ed estrai tutti i valori minori e uguali di 20 e maggiori di 70
-val[___  | ___]
+# val[___  | ___]
 ```
 
 ```{r con4-hint-1}
@@ -378,5 +378,5 @@ val[___  | ___]
 
 ```{r con4-hint-2}
 # Soluzione:
-val[val <= 20 | val > 70]
+# val[val <= 20 | val > 70]
 ```
