--- a/inst/tutorials/lezione_03_manipolazione/lezione_03_manipolazione.Rmd
+++ b/inst/tutorials/lezione_03_manipolazione/lezione_03_manipolazione.Rmd
@@ -22,8 +22,8 @@ penguins <- palmerpenguins::penguins
 # Usando la tibble chiamata penguins seleziona le colonne 1, 5, 8
 # Usa la funziona select e il pipe opetator %>%
 
-penguins %>% 
-    select(___, ___, ___)
+# penguins %>% 
+#     select(___, ___, ___)
 ```
 
 ```{r df1-hint-1}
@@ -32,8 +32,8 @@ penguins %>%
 
 ```{r df1-hint-2}
 # La soluzione è
-penguins %>% 
-    select(1, 5, 8)
+# penguins %>% 
+#     select(1, 5, 8)
 ```
 
 
@@ -41,8 +41,8 @@ penguins %>%
 # Usando la tibble chiamata penguins seleziona le colonne species, sex and year
 # Usa la funziona select e il pipe opetator %>%
 
-penguins %>% 
-    select(___, ___, ___)
+# penguins %>% 
+#     select(___, ___, ___)
 ```
 
 ```{r df2-hint-1}
@@ -51,15 +51,14 @@ penguins %>%
 
 ```{r df2-hint-2}
 # La soluzione è
-penguins %>% 
-    select(species, sex, year)
+# penguins %>% 
+#     select(species, sex, year)
 ```
 
 ```{r df3, exercise=TRUE, exercise.setup = "df1-setup" }
 # Usando la tibble chiamata penguins seleziona tutte le colonne il cui nome inizia con la lettera "b".    
 # Usa la funziona select e il pipe opetator %>%
 
-penguins
 ```
 
 ```{r df3-hint-1}
@@ -74,15 +73,14 @@ penguins
 
 ```{r df3-hint-3}
 # La soluzione è
-penguins %>% 
-    select(starts_with("b"))
+# penguins %>% 
+#     select(starts_with("b"))
 ```
 
 ```{r df4, exercise=TRUE, exercise.setup = "df1-setup" }
 # Usando la tibble chiamata penguins elimina tutte le colonne il cui nome finisce con la "mm".    
 # Usa la funziona select e il pipe opetator %>%
 
-penguins
 ```
 
 ```{r df4-hint-1}
@@ -103,8 +101,8 @@ penguins
 
 ```{r df4-hint-4}
 # La soluzione è
-penguins %>% 
-    select(-ends_with("mm"))
+# penguins %>% 
+#     select(-ends_with("mm"))
 ```
 
 ## Filter
@@ -113,7 +111,6 @@ penguins %>%
 # Usando la tibble chiamata penguins estrai tutte le osservazioni che contengono la specie Adelie
 # Usa la funziona filter e il pipe opetator %>%
 
-penguins
 ```
 
 ```{r df5-hint-1}
@@ -128,8 +125,8 @@ penguins
 
 ```{r df5-hint-3}
 # La soluzione è
-penguins %>% 
-    filter(species == "Adelie")
+# penguins %>% 
+#     filter(species == "Adelie")
 ```
 
 ```{r df6, exercise=TRUE, exercise.setup = "df1-setup" }
@@ -137,7 +134,6 @@ penguins %>%
 # e l'isola Torgersen
 # Usa la funziona filter e il pipe opetator %>%
 
-penguins
 ```
 
 ```{r df6-hint-1}
@@ -146,16 +142,15 @@ penguins
 
 ```{r df6-hint-2}
 # La soluzione è
-penguins %>% 
-    filter(species == "Adelie",
-           island == "Torgersen")
+# penguins %>% 
+#     filter(species == "Adelie",
+#            island == "Torgersen")
 ```
 
 ```{r df7, exercise=TRUE, exercise.setup = "df1-setup" }
 # Usando la tibble chiamata penguins estrai tutti i pinguini dell'isola di Biscoe che hanno la lunghezza del becco
 # compresa tra 34 e 36 inclusi
 
-penguins
 ```
 
 ```{r df7-hint-1}
@@ -164,17 +159,16 @@ penguins
 
 ```{r df7-hint-2}
 # La soluzione è
-penguins %>% 
-    filter(island == "Biscoe",
-           bill_length_mm >= 34,
-           bill_length_mm <= 36)
+# penguins %>% 
+#     filter(island == "Biscoe",
+#            bill_length_mm >= 34,
+#            bill_length_mm <= 36)
 ```
 
 ```{r df8, exercise=TRUE, exercise.setup = "df1-setup" }
 # Usando la tibble chiamata penguins estrai tutti i pinguini dell'isola di Dream che hanno la lunghezza delle pinne
 # minore di 179 e maggiore di 209
 
-penguins
 ```
 
 ```{r df8-hint-1}
@@ -188,15 +182,14 @@ penguins
 
 ```{r df8-hint-3}
 # La soluzione è
-penguins %>% 
-    filter(island == "Dream",
-           flipper_length_mm < 179 | flipper_length_mm > 209)
+# penguins %>% 
+#     filter(island == "Dream",
+#            flipper_length_mm < 179 | flipper_length_mm > 209)
 ```
 
 ```{r df8b, exercise=TRUE, exercise.setup = "df1-setup" }
 # Usando la tibble chiamata penguins elimina tutti gli NA nella colonna bill_length_mm
 
-penguins
 ```
 
 ```{r df8b-hint-1}
@@ -210,8 +203,8 @@ penguins
 
 ```{r df8b-hint-3}
 # La soluzione è
-penguins %>% 
-    filter(!is.na(bill_length_mm))
+# penguins %>% 
+#     filter(!is.na(bill_length_mm))
 ```
 
 
@@ -221,7 +214,6 @@ penguins %>%
 # Usando la tibble chiamata penguins crea una nuova colonna che contenga la
 # lunghezza del becco in centimetri
 
-penguins
 ```
 
 ```{r df9-hint-1}
@@ -236,8 +228,8 @@ penguins
 
 ```{r df9-hint-3}
 # La soluzione è
-penguins %>% 
-    mutate(bill_length_cm = bill_length_mm / 10)
+# penguins %>% 
+#     mutate(bill_length_cm = bill_length_mm / 10)
 ```
 
 ### Questo esercizio ha un livello di difficoltà elevato
@@ -255,8 +247,8 @@ penguins %>%
 # - se il nome dell'isola è Torgersen allora cambialo in Elba;
 # - se il nome non è Torgersen allora lascia il nome corrente
 
-penguins %>%
-    mutate(island = ifelse(___ == ___, "___", island))
+# penguins %>%
+#     mutate(island = ifelse(___ == ___, "___", island))
 ```
 
 ```{r df10-hint-1}
@@ -269,8 +261,8 @@ penguins %>%
 
 ```{r df10-hint-3}
 # La soluzione è
-penguins %>% 
-    mutate(island = ifelse(island == "Torgersen", "Elba", island))
+# penguins %>% 
+#     mutate(island = ifelse(island == "Torgersen", "Elba", island))
 ```
 
 ## Group_by / Summarise
@@ -300,17 +292,17 @@ penguins %>%
 
 ```{r df11-hint-4}
 # La soluzione 1 è
-penguins %>% 
-    group_by(species) %>%
-    summarise(media = mean(bill_length_mm, na.rm = TRUE),
-              mediana = median(bill_length_mm, na.rm = TRUE))
+# penguins %>% 
+#     group_by(species) %>%
+#     summarise(media = mean(bill_length_mm, na.rm = TRUE),
+#               mediana = median(bill_length_mm, na.rm = TRUE))
 
 # La soluzione 2 è
-penguins %>% 
-    filter(!is.na(bill_length_mm)) %>%
-    group_by(species) %>%
-    summarise(media = mean(bill_length_mm),
-              mediana = median(bill_length_mm))
+# penguins %>% 
+#     filter(!is.na(bill_length_mm)) %>%
+#     group_by(species) %>%
+#     summarise(media = mean(bill_length_mm),
+#               mediana = median(bill_length_mm))
 ```
 
 ```{r df11b, exercise=TRUE, exercise.setup = "df1-setup" }
@@ -337,17 +329,17 @@ penguins %>%
 
 ```{r df11b-hint-4}
 # La soluzione 1 è
-penguins %>% 
-    group_by(species, year) %>%
-    summarise(media = mean(bill_length_mm, na.rm = TRUE),
-              mediana = median(bill_length_mm, na.rm = TRUE))
+# penguins %>% 
+#     group_by(species, year) %>%
+#     summarise(media = mean(bill_length_mm, na.rm = TRUE),
+#               mediana = median(bill_length_mm, na.rm = TRUE))
 
 # La soluzione 2 è
-penguins %>% 
-    filter(!is.na(bill_length_mm)) %>%
-    group_by(species, year) %>%
-    summarise(media = mean(bill_length_mm),
-              mediana = median(bill_length_mm))
+# penguins %>% 
+#     filter(!is.na(bill_length_mm)) %>%
+#     group_by(species, year) %>%
+#     summarise(media = mean(bill_length_mm),
+#               mediana = median(bill_length_mm))
 ```
 
 ```{r df12, exercise=TRUE, exercise.setup = "df1-setup" }
@@ -374,17 +366,17 @@ penguins %>%
 
 ```{r df12-hint-4}
 # La soluzione 1 è
-penguins %>% 
-    group_by(species, year, island) %>%
-    summarise(media = mean(bill_length_mm, na.rm = TRUE),
-              mediana = median(bill_length_mm, na.rm = TRUE))
+# penguins %>% 
+#     group_by(species, year, island) %>%
+#     summarise(media = mean(bill_length_mm, na.rm = TRUE),
+#               mediana = median(bill_length_mm, na.rm = TRUE))
 
 # La soluzione 2 è
-penguins %>% 
-    filter(!is.na(bill_length_mm)) %>%
-    group_by(species, year, island) %>%
-    summarise(media = mean(bill_length_mm),
-              mediana = median(bill_length_mm))
+# penguins %>% 
+#     filter(!is.na(bill_length_mm)) %>%
+#     group_by(species, year, island) %>%
+#     summarise(media = mean(bill_length_mm),
+#               mediana = median(bill_length_mm))
 ```
 
 ```{r df13, exercise=TRUE, exercise.setup = "df1-setup" }
@@ -402,9 +394,9 @@ penguins %>%
 
 ```{r df13-hint-3}
 # La soluzione è
-penguins %>% 
-    group_by(sex) %>%
-    filter(bill_length_mm == min(bill_length_mm))
+# penguins %>% 
+#     group_by(sex) %>%
+#     filter(bill_length_mm == min(bill_length_mm))
 ```
 
 ```{r df14, exercise=TRUE, exercise.setup = "df1-setup" }
@@ -422,9 +414,9 @@ penguins %>%
 
 ```{r df14-hint-3}
 # La soluzione è
-penguins %>% 
-    group_by(sex, species) %>%
-    filter(bill_length_mm == min(bill_length_mm))
+# penguins %>% 
+#     group_by(sex, species) %>%
+#     filter(bill_length_mm == min(bill_length_mm))
 ```
 
 ## Pivoting
@@ -455,19 +447,19 @@ penguins %>%
 
 ```{r piv1-hint-3}
 # La soluzione è
-penguins %>% 
-    count(species, year) %>%
-    pivot_wider(names_from = species,
-                values_from = n)
+# penguins %>% 
+#     count(species, year) %>%
+#     pivot_wider(names_from = species,
+#                 values_from = n)
 ```
 
 ```{r piv2, exercise=TRUE, exercise.setup = "df1-setup" }
 # Corri il seguente codice per generare la tabella "wide"
 
-wide <- penguins %>%
-    drop_na() %>% 
-    group_by(island, year) %>%
-    summarise(across(ends_with("mm"), mean, .names = "mean_{.col}"))
+# wide <- penguins %>%
+#     drop_na() %>% 
+#     group_by(island, year) %>%
+#     summarise(across(ends_with("mm"), mean, .names = "mean_{.col}"))
 
 # Crea una tabella "lunga" che contenga nella colonna "MEAN" il nome della media calcolata (tutte le colonne che iniziano con mean_);
 # nella colonna "VALUE" il valore della media
@@ -487,15 +479,16 @@ wide <- penguins %>%
 
 ```{r piv2-hint-3}
 # La soluzione 1 è
-wide %>%
-    pivot_longer(cols = starts_with("mean"),
-                 names_to = "MEAN",
-                 values_to = "VALUE")
+# wide %>%
+#     pivot_longer(cols = starts_with("mean"),
+#                  names_to = "MEAN",
+#                  values_to = "VALUE")
+
 # La soluzione 2 è
-wide %>%
-    pivot_longer(cols = mean_bill_length_mm:mean_flipper_length_mm,
-                 names_to = "MEAN",
-                 values_to = "VALUE")
+# wide %>%
+#     pivot_longer(cols = mean_bill_length_mm:mean_flipper_length_mm,
+#                  names_to = "MEAN",
+#                  values_to = "VALUE")
 
 ```
 
